--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
     "@dnd-kit/sortable": "^7.0.1",
     "@dnd-kit/utilities": "^3.2.0",
     "@stitches/react": "^1.2.8",
+    "lodash": "^4.17.21",
     "next": "12.3.1",
     "next-svgr": "^0.0.2",
     "react": "18.2.0",
     "react-awesome-button": "^6.5.1",
     "react-beautiful-dnd": "^13.1.1",
+    "react-dnd": "^16.0.1",
     "react-dom": "18.2.0",
     "uuid": "^9.0.0"
   },
